# vylabs-chessmate

./: .gitignore  Justfile  README.md  docker-compose.yml
backend/cognitive_service/: .dockerignore  .env.example  .env.ollama.example  Dockerfile  pyproject.toml  requirements.txt  ruff.toml
backend/cognitive_service/.dbt/: .user.yml  profiles.yml
backend/cognitive_service/alembic/: env.py
backend/cognitive_service/alembic/versions/: 47fccc9e92d3_create_initial_chess_knowledge_table.py
backend/cognitive_service/app/: agent_io_service.py  config.py  logger.py  main.py
backend/cognitive_service/app/agents/: coaching_agent.py  game_state_agent.py  knowledge_agent.py  prompt.py  root_agent.py
backend/cognitive_service/app/core/: exceptions.py  fen_translator.py  metrics.py  pgn_parser.py
backend/cognitive_service/app/db/: models.py
backend/cognitive_service/app/prompts/: coaching_agent.md  game_state_agent.md  illegal_move_agent.md  knowledge_agent.md
backend/cognitive_service/app/services/: cache_service.py
backend/cognitive_service/app/tests/tools/: test_agent_workflow_prompt_factory.py
backend/cognitive_service/app/tools/: agent_workflow_prompt_factory.py  fen_query_factory.py  rag_tool.py
backend/cognitive_service/dbt_project/: .user.yml  dbt_project.yml  profiles.yml
backend/cognitive_service/dbt_project/models/: prepared_chess_knowledge.sql  schema.yml  sources.yml
backend/cognitive_service/scripts/: create_vectorizer.py  dlt_ingest_only.py
backend/cognitive_service/tests/unit/: test_fen_translator.py  test_pgn_parser.py
(+69 files in other folders)
